--- a/pyspark/mllib_intro.ipynb
+++ b/pyspark/mllib_intro.ipynb
@@ -46,6 +46,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though the package is currently in a maintenance mode and is not actively\n",
+    "being worked on, it is still good to know how to use it. Also, for now it is the only\n",
+    "package available to train models while streaming data.\n",
+    "\n",
+    "The MLlib package in Spark operates strictly on RDDs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -216,7 +227,7 @@
     "for col in ['CIG_BEFORE', 'CIG_1_TRI', 'CIG_2_TRI', 'CIG_3_TRI']:\n",
     "    births_trimmed = births_trimmed.withColumn(col,\n",
     "                                               fn.when(births_trimmed[col] > 98,\n",
-    "                                               fn.lit('0')).otherwise(births_trimmed[col]))"
+    "                                               fn.lit(0)).otherwise(births_trimmed[col]))"
    ]
   },
   {
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +407,7 @@
        " 'PREV_BIRTH_PRETERM']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,10 +418,515 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+-----+\n",
+      "|INFANT_ALIVE_AT_REPORT|count|\n",
+      "+----------------------+-----+\n",
+      "|                     1|23349|\n",
+      "|                  null|45429|\n",
+      "|                     0|22080|\n",
+      "+----------------------+-----+\n",
+      "\n",
+      "+-----------+-----+\n",
+      "|BIRTH_PLACE|count|\n",
+      "+-----------+-----+\n",
+      "|          4|  327|\n",
+      "|          7|   91|\n",
+      "|          6|   11|\n",
+      "|          3|  224|\n",
+      "|       null|45429|\n",
+      "|          9|    8|\n",
+      "|          1|44558|\n",
+      "|          5|   74|\n",
+      "|          2|  136|\n",
+      "+-----------+-----+\n",
+      "\n",
+      "+------------+-----+\n",
+      "|DIABETES_PRE|count|\n",
+      "+------------+-----+\n",
+      "|           1|  548|\n",
+      "|        null|45429|\n",
+      "|           0|44881|\n",
+      "+------------+-----+\n",
+      "\n",
+      "+-------------+-----+\n",
+      "|DIABETES_GEST|count|\n",
+      "+-------------+-----+\n",
+      "|            1| 1978|\n",
+      "|         null|45429|\n",
+      "|            0|43451|\n",
+      "+-------------+-----+\n",
+      "\n",
+      "+------------+-----+\n",
+      "|HYP_TENS_PRE|count|\n",
+      "+------------+-----+\n",
+      "|           1| 1081|\n",
+      "|        null|45429|\n",
+      "|           0|44348|\n",
+      "+------------+-----+\n",
+      "\n",
+      "+-------------+-----+\n",
+      "|HYP_TENS_GEST|count|\n",
+      "+-------------+-----+\n",
+      "|            1| 2127|\n",
+      "|         null|45429|\n",
+      "|            0|43302|\n",
+      "+-------------+-----+\n",
+      "\n",
+      "+------------------+-----+\n",
+      "|PREV_BIRTH_PRETERM|count|\n",
+      "+------------------+-----+\n",
+      "|                 1| 2341|\n",
+      "|              null|45429|\n",
+      "|                 0|43088|\n",
+      "+------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in categorical_cols:\n",
+    "    births_trimmed.cube(col).count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlations help to identify collinear numeric features and handle them\n",
+    "appropriately. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.mllib.stat import Statistics\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = numeric_cols\n",
+    "features = births_trimmed.select(*numeric_cols).rdd.map(lambda row: row[0:])\n",
+    "corr_mat=Statistics.corr(features, method=\"pearson\")\n",
+    "corr_df = pd.DataFrame(corr_mat)\n",
+    "corr_df.index, corr_df.columns = columns, columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MOTHER_AGE_YEARS</th>\n",
+       "      <th>FATHER_COMBINED_AGE</th>\n",
+       "      <th>CIG_BEFORE</th>\n",
+       "      <th>CIG_1_TRI</th>\n",
+       "      <th>CIG_2_TRI</th>\n",
+       "      <th>CIG_3_TRI</th>\n",
+       "      <th>MOTHER_HEIGHT_IN</th>\n",
+       "      <th>MOTHER_PRE_WEIGHT</th>\n",
+       "      <th>MOTHER_DELIVERY_WEIGHT</th>\n",
+       "      <th>MOTHER_WEIGHT_GAIN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MOTHER_AGE_YEARS</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.035203</td>\n",
+       "      <td>-0.064101</td>\n",
+       "      <td>-0.045254</td>\n",
+       "      <td>-0.033569</td>\n",
+       "      <td>-0.027320</td>\n",
+       "      <td>0.041911</td>\n",
+       "      <td>0.028520</td>\n",
+       "      <td>0.022333</td>\n",
+       "      <td>0.014624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FATHER_COMBINED_AGE</th>\n",
+       "      <td>-0.035203</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.087993</td>\n",
+       "      <td>0.094362</td>\n",
+       "      <td>0.091438</td>\n",
+       "      <td>0.076141</td>\n",
+       "      <td>0.086203</td>\n",
+       "      <td>0.127900</td>\n",
+       "      <td>0.097506</td>\n",
+       "      <td>0.035482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CIG_BEFORE</th>\n",
+       "      <td>-0.064101</td>\n",
+       "      <td>0.087993</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.825531</td>\n",
+       "      <td>0.722135</td>\n",
+       "      <td>0.623034</td>\n",
+       "      <td>-0.010871</td>\n",
+       "      <td>-0.026424</td>\n",
+       "      <td>-0.004672</td>\n",
+       "      <td>-0.011881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CIG_1_TRI</th>\n",
+       "      <td>-0.045254</td>\n",
+       "      <td>0.094362</td>\n",
+       "      <td>0.825531</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.865457</td>\n",
+       "      <td>0.759920</td>\n",
+       "      <td>-0.006381</td>\n",
+       "      <td>-0.012328</td>\n",
+       "      <td>-0.001128</td>\n",
+       "      <td>-0.014818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CIG_2_TRI</th>\n",
+       "      <td>-0.033569</td>\n",
+       "      <td>0.091438</td>\n",
+       "      <td>0.722135</td>\n",
+       "      <td>0.865457</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.893076</td>\n",
+       "      <td>-0.002765</td>\n",
+       "      <td>-0.006062</td>\n",
+       "      <td>0.001460</td>\n",
+       "      <td>-0.014359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CIG_3_TRI</th>\n",
+       "      <td>-0.027320</td>\n",
+       "      <td>0.076141</td>\n",
+       "      <td>0.623034</td>\n",
+       "      <td>0.759920</td>\n",
+       "      <td>0.893076</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.000938</td>\n",
+       "      <td>-0.003776</td>\n",
+       "      <td>0.004836</td>\n",
+       "      <td>-0.006379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOTHER_HEIGHT_IN</th>\n",
+       "      <td>0.041911</td>\n",
+       "      <td>0.086203</td>\n",
+       "      <td>-0.010871</td>\n",
+       "      <td>-0.006381</td>\n",
+       "      <td>-0.002765</td>\n",
+       "      <td>-0.000938</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.452570</td>\n",
+       "      <td>0.474217</td>\n",
+       "      <td>0.331764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOTHER_PRE_WEIGHT</th>\n",
+       "      <td>0.028520</td>\n",
+       "      <td>0.127900</td>\n",
+       "      <td>-0.026424</td>\n",
+       "      <td>-0.012328</td>\n",
+       "      <td>-0.006062</td>\n",
+       "      <td>-0.003776</td>\n",
+       "      <td>0.452570</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.535970</td>\n",
+       "      <td>0.649941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOTHER_DELIVERY_WEIGHT</th>\n",
+       "      <td>0.022333</td>\n",
+       "      <td>0.097506</td>\n",
+       "      <td>-0.004672</td>\n",
+       "      <td>-0.001128</td>\n",
+       "      <td>0.001460</td>\n",
+       "      <td>0.004836</td>\n",
+       "      <td>0.474217</td>\n",
+       "      <td>0.535970</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.596929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOTHER_WEIGHT_GAIN</th>\n",
+       "      <td>0.014624</td>\n",
+       "      <td>0.035482</td>\n",
+       "      <td>-0.011881</td>\n",
+       "      <td>-0.014818</td>\n",
+       "      <td>-0.014359</td>\n",
+       "      <td>-0.006379</td>\n",
+       "      <td>0.331764</td>\n",
+       "      <td>0.649941</td>\n",
+       "      <td>0.596929</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        MOTHER_AGE_YEARS  FATHER_COMBINED_AGE  CIG_BEFORE  \\\n",
+       "MOTHER_AGE_YEARS                1.000000            -0.035203   -0.064101   \n",
+       "FATHER_COMBINED_AGE            -0.035203             1.000000    0.087993   \n",
+       "CIG_BEFORE                     -0.064101             0.087993    1.000000   \n",
+       "CIG_1_TRI                      -0.045254             0.094362    0.825531   \n",
+       "CIG_2_TRI                      -0.033569             0.091438    0.722135   \n",
+       "CIG_3_TRI                      -0.027320             0.076141    0.623034   \n",
+       "MOTHER_HEIGHT_IN                0.041911             0.086203   -0.010871   \n",
+       "MOTHER_PRE_WEIGHT               0.028520             0.127900   -0.026424   \n",
+       "MOTHER_DELIVERY_WEIGHT          0.022333             0.097506   -0.004672   \n",
+       "MOTHER_WEIGHT_GAIN              0.014624             0.035482   -0.011881   \n",
+       "\n",
+       "                        CIG_1_TRI  CIG_2_TRI  CIG_3_TRI  MOTHER_HEIGHT_IN  \\\n",
+       "MOTHER_AGE_YEARS        -0.045254  -0.033569  -0.027320          0.041911   \n",
+       "FATHER_COMBINED_AGE      0.094362   0.091438   0.076141          0.086203   \n",
+       "CIG_BEFORE               0.825531   0.722135   0.623034         -0.010871   \n",
+       "CIG_1_TRI                1.000000   0.865457   0.759920         -0.006381   \n",
+       "CIG_2_TRI                0.865457   1.000000   0.893076         -0.002765   \n",
+       "CIG_3_TRI                0.759920   0.893076   1.000000         -0.000938   \n",
+       "MOTHER_HEIGHT_IN        -0.006381  -0.002765  -0.000938          1.000000   \n",
+       "MOTHER_PRE_WEIGHT       -0.012328  -0.006062  -0.003776          0.452570   \n",
+       "MOTHER_DELIVERY_WEIGHT  -0.001128   0.001460   0.004836          0.474217   \n",
+       "MOTHER_WEIGHT_GAIN      -0.014818  -0.014359  -0.006379          0.331764   \n",
+       "\n",
+       "                        MOTHER_PRE_WEIGHT  MOTHER_DELIVERY_WEIGHT  \\\n",
+       "MOTHER_AGE_YEARS                 0.028520                0.022333   \n",
+       "FATHER_COMBINED_AGE              0.127900                0.097506   \n",
+       "CIG_BEFORE                      -0.026424               -0.004672   \n",
+       "CIG_1_TRI                       -0.012328               -0.001128   \n",
+       "CIG_2_TRI                       -0.006062                0.001460   \n",
+       "CIG_3_TRI                       -0.003776                0.004836   \n",
+       "MOTHER_HEIGHT_IN                 0.452570                0.474217   \n",
+       "MOTHER_PRE_WEIGHT                1.000000                0.535970   \n",
+       "MOTHER_DELIVERY_WEIGHT           0.535970                1.000000   \n",
+       "MOTHER_WEIGHT_GAIN               0.649941                0.596929   \n",
+       "\n",
+       "                        MOTHER_WEIGHT_GAIN  \n",
+       "MOTHER_AGE_YEARS                  0.014624  \n",
+       "FATHER_COMBINED_AGE               0.035482  \n",
+       "CIG_BEFORE                       -0.011881  \n",
+       "CIG_1_TRI                        -0.014818  \n",
+       "CIG_2_TRI                        -0.014359  \n",
+       "CIG_3_TRI                        -0.006379  \n",
+       "MOTHER_HEIGHT_IN                  0.331764  \n",
+       "MOTHER_PRE_WEIGHT                 0.649941  \n",
+       "MOTHER_DELIVERY_WEIGHT            0.596929  \n",
+       "MOTHER_WEIGHT_GAIN                1.000000  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the 'CIG_...' features are highly correlated, so we can drop most of\n",
+    "them. Since we want to predict the survival chances of an infant as soon as possible,\n",
+    "we will keep only the 'CIG_1_TRI'. Also, as expected, the weight features are also\n",
+    "highly correlated and we will only keep the 'MOTHER_PRE_WEIGHT':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_to_keep = [\n",
+    " 'INFANT_ALIVE_AT_REPORT',\n",
+    " 'BIRTH_PLACE',\n",
+    " 'MOTHER_AGE_YEARS',\n",
+    " 'FATHER_COMBINED_AGE',\n",
+    " 'CIG_1_TRI',\n",
+    " 'MOTHER_HEIGHT_IN',\n",
+    " 'MOTHER_PRE_WEIGHT',\n",
+    " 'DIABETES_PRE',\n",
+    " 'DIABETES_GEST',\n",
+    " 'HYP_TENS_PRE',\n",
+    " 'HYP_TENS_GEST',\n",
+    " 'PREV_BIRTH_PRETERM'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "births_transformed = births_trimmed.select(*features_to_keep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check if all variables are ready:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- INFANT_ALIVE_AT_REPORT: integer (nullable = false)\n",
+      " |-- BIRTH_PLACE: string (nullable = true)\n",
+      " |-- MOTHER_AGE_YEARS: integer (nullable = true)\n",
+      " |-- FATHER_COMBINED_AGE: integer (nullable = true)\n",
+      " |-- CIG_1_TRI: integer (nullable = true)\n",
+      " |-- MOTHER_HEIGHT_IN: integer (nullable = true)\n",
+      " |-- MOTHER_PRE_WEIGHT: integer (nullable = true)\n",
+      " |-- DIABETES_PRE: integer (nullable = false)\n",
+      " |-- DIABETES_GEST: integer (nullable = false)\n",
+      " |-- HYP_TENS_PRE: integer (nullable = false)\n",
+      " |-- HYP_TENS_GEST: integer (nullable = false)\n",
+      " |-- PREV_BIRTH_PRETERM: integer (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "births_transformed.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating the final dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BIRTH_PLACE is still a string. Since it is not an ordinal variable, we have to create dummy variables referring to its values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "births_transformed = births_transformed.withColumn(\"BIRTH_PLACE\", births_transformed[\"BIRTH_PLACE\"].cast(typ.IntegerType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_birth = births_transformed.select(\"BIRTH_PLACE\").distinct().rdd.flatMap(lambda x: x).collect()\n",
+    "exprs = [fn.when(fn.col(\"BIRTH_PLACE\") == category, 1).otherwise(0).alias('BIRTH_PLACE_' + str(category))\\\n",
+    "         for category in categories_birth]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We exclude one of the dummy variables to avoid the <i>Dummy variable trap</i>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "births_transformed = births_transformed.select('*', *exprs[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we exclude the BIRTH_PLACE variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "births_final = births_transformed.select(*[col for col in births_transformed.columns\\\n",
+    "                            if col != 'BIRTH_PLACE'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a CSV file with all data to use later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "births_final.write.csv('./data/births_final.csv', header = True)"
+   ]
   }
  ],
  "metadata": {
